--- a/index.html
+++ b/index.html
@@ -202,28 +202,28 @@
     <div id="photos">
       <h2>Snippets from the video</h2>
       <div class="photo">
-        <img src="img/slide1.png" alt="Photo 1">
+        <img src="img/Slide1.png" alt="Photo 1">
         <div class="description">
           <p>A mesmerizing image of me playing the piano, where melodies come to life and emotions are painted with musical notes.</p>
 
         </div>
       </div>
       <div class="photo">
-        <img src="img/slide2.png" alt="Photo 2">
+        <img src="img/Slide2.png" alt="Photo 2">
         <div class="description">
           <p>A captivating photo of me lost in the pages of a book, where words weave tales that transport us to distant lands and spark our imagination.</p>
 
         </div>
       </div>
       <div class="photo">
-        <img src="img/slide3.png" alt="Photo 3">
+        <img src="img/Slide3.png" alt="Photo 3">
         <div class="description">
           <p>An array of vibrant wall art adorning the art center, showcasing a diverse fusion of colors, shapes, and expressions that inspire awe and introspection.</p>
 
         </div>
       </div>
       <div class="photo">
-        <img src="img/slide4.png" alt="Photo 4">
+        <img src="img/Slide4.png" alt="Photo 4">
         <div class="description">
           <p>A cinematic mural capturing the essence of movies, evoking the magic of storytelling and the power of visual narratives.</p>
 
