--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
     <div id="photos">
       <h2>Snippets from the video</h2>
       <div class="photo">
-        <img src="img/Slide1.png" alt="Photo 1">
+        <img src="img/Slide1.jpg" alt="Photo 1">
         <div class="description">
           <p>A mesmerizing image of me playing the piano, where melodies come to life and emotions are painted with musical notes.</p>
 
